src/test/resources/examples/invalid_cases/MoreFieldVariables.queen
public final implementation MoreFieldVariables of FieldVariables {

   private int x = 1, y = 2, z = 3;

   private int m;

   private int n, p;

}